[gd_scene load_steps=21 format=2]

[ext_resource path="res://asserts/art/road.png" type="Texture" id=1]
[ext_resource path="res://asserts/ttf/FiraCode-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://OpeningCG.tscn" type="PackedScene" id=4]
[ext_resource path="res://asserts/themes/MainSceneButton.tres" type="Theme" id=5]
[ext_resource path="res://MainScene.tscn" type="PackedScene" id=6]
[ext_resource path="res://Event.gd" type="Script" id=7]
[ext_resource path="res://Date.gd" type="Script" id=8]
[ext_resource path="res://Content.gd" type="Script" id=9]
[ext_resource path="res://Words.gd" type="Script" id=10]
[ext_resource path="res://Collect.gd" type="Script" id=11]
[ext_resource path="res://Market.gd" type="Script" id=12]
[ext_resource path="res://asserts/art/TitleButton.png" type="Texture" id=19]
[ext_resource path="res://asserts/themes/标题字体.tres" type="Theme" id=20]
[ext_resource path="res://asserts/art/MainTitle.png" type="Texture" id=21]
[ext_resource path="res://asserts/art/subTitle.png" type="Texture" id=22]
[ext_resource path="res://DialogScene.tscn" type="PackedScene" id=23]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="Theme" id=8]

[node name="Game" type="Node"]
script = ExtResource( 3 )

[node name="Interface" type="Node" parent="."]

[node name="MainMenu" type="Control" parent="Interface"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Background" type="TextureRect" parent="Interface/MainMenu"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true

[node name="MainTitle" type="TextureRect" parent="Interface/MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 176.0
margin_top = 104.0
margin_right = 1156.0
margin_bottom = 297.0
theme = SubResource( 2 )
texture = ExtResource( 21 )

[node name="SubTitle" type="TextureRect" parent="Interface/MainMenu"]
margin_left = 1272.0
margin_top = 280.0
margin_right = 2252.0
margin_bottom = 344.0
texture = ExtResource( 22 )

[node name="StartButton" type="TextureButton" parent="Interface/MainMenu"]
margin_left = 1264.0
margin_top = 384.0
margin_right = 1676.0
margin_bottom = 448.0
texture_normal = ExtResource( 19 )
expand = true

[node name="StartButtonText" type="Label" parent="Interface/MainMenu/StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -20.5
margin_right = 65.0
margin_bottom = 20.5
theme = ExtResource( 20 )
custom_colors/font_color = Color( 0.364706, 0.25098, 0.215686, 1 )
text = "开始新游戏"
align = 1
valign = 1

[node name="ContinueButton" type="TextureButton" parent="Interface/MainMenu"]
margin_left = 1264.0
margin_top = 488.0
margin_right = 1676.0
margin_bottom = 552.0
theme = ExtResource( 5 )
texture_normal = ExtResource( 19 )
expand = true

[node name="ContinueButtonText" type="Label" parent="Interface/MainMenu/ContinueButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -20.5
margin_right = 65.0
margin_bottom = 20.5
theme = ExtResource( 20 )
custom_colors/font_color = Color( 0.364706, 0.25098, 0.215686, 1 )
text = "继续游戏"
align = 1
valign = 1

[node name="SettingButton" type="TextureButton" parent="Interface/MainMenu"]
margin_left = 1264.0
margin_top = 592.0
margin_right = 1676.0
margin_bottom = 656.0
theme = ExtResource( 5 )
texture_normal = ExtResource( 19 )
expand = true

[node name="SettingButtonText" type="Label" parent="Interface/MainMenu/SettingButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -20.5
margin_right = 65.0
margin_bottom = 20.5
theme = ExtResource( 20 )
custom_colors/font_color = Color( 0.364706, 0.25098, 0.215686, 1 )
text = "游戏设置"
align = 1
valign = 1

[node name="ExitButton" type="TextureButton" parent="Interface/MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 304.0
margin_top = 156.0
margin_right = 716.0
margin_bottom = 220.0
theme = ExtResource( 5 )
texture_normal = ExtResource( 19 )
expand = true

[node name="ExitButtonText" type="Label" parent="Interface/MainMenu/ExitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -20.5
margin_right = 65.0
margin_bottom = 20.5
theme = ExtResource( 20 )
custom_colors/font_color = Color( 0.364706, 0.25098, 0.215686, 1 )
text = "退出游戏"
align = 1
valign = 1

[node name="ContinueMenu" type="Control" parent="Interface"]
margin_right = 40.0
margin_bottom = 40.0

[node name="SettingMenu" type="Control" parent="Interface"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ExitDialog" type="ConfirmationDialog" parent="Interface"]
margin_left = 754.0
margin_top = 650.0
margin_right = 1166.0
margin_bottom = 720.0
theme = SubResource( 8 )
window_title = "Sure to quit?"
resizable = true

[node name="Content" type="Node" parent="."]
script = ExtResource( 9 )

[node name="OpeningCG" parent="Content" instance=ExtResource( 4 )]

[node name="Scene" type="Node2D" parent="Content"]

[node name="MainScene" parent="Content/Scene" instance=ExtResource( 6 )]

[node name="Dialog" parent="Content/Scene" instance=ExtResource( 23 )]

[node name="System" type="Node" parent="Content"]

[node name="Data" type="Node" parent="Content/System"]

[node name="Date" type="Node" parent="Content/System/Data"]
script = ExtResource( 8 )

[node name="Words" type="Node" parent="Content/System/Data"]
script = ExtResource( 10 )

[node name="Interact" type="Node" parent="Content/System"]

[node name="Collect" type="Node" parent="Content/System/Interact"]
script = ExtResource( 11 )

[node name="Market" type="Node" parent="Content/System/Interact"]
script = ExtResource( 12 )

[node name="Workflow" type="Node" parent="Content/System"]

[node name="Event" type="Node" parent="Content/System/Workflow"]
script = ExtResource( 7 )
